--- a/SuperEconomicoApp/Views/ProductsView.xaml
+++ b/SuperEconomicoApp/Views/ProductsView.xaml
@@ -4,13 +4,16 @@
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="True"
              xmlns:pancake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
-             xmlns:helpers="clr-namespace:DemoApp.Helpers"
+             xmlns:Converter="clr-namespace:SuperEconomicoApp.Converters"
              xmlns:vm="clr-namespace:SuperEconomicoApp.ViewsModels"
              x:Class="SuperEconomicoApp.Views.ProductsView"
-              xmlns:sombras="clr-namespace:Sharpnado.Shades;assembly=Sharpnado.Shadows"
-               xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
-              BackgroundColor="{AppThemeBinding Light={StaticResource LightPageBackgroundColor}, Dark={StaticResource DarkPageBackgroundColor}}">
+             xmlns:sombras="clr-namespace:Sharpnado.Shades;assembly=Sharpnado.Shadows"
+             xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+             BackgroundColor="{AppThemeBinding Light={StaticResource LightPageBackgroundColor}, Dark={StaticResource DarkPageBackgroundColor}}">
     <ContentPage.Resources>
+        <ResourceDictionary>
+            <Converter:Base64ToImageSource x:Key="Base64ToImage" />
+        </ResourceDictionary>
         <Style TargetType="Grid">
             <Setter Property="VisualStateManager.VisualStateGroups">
                 <VisualStateGroupList>
@@ -32,7 +35,7 @@
         <vm:ProductsViewModel/>
     </ContentPage.BindingContext>
     <ContentPage.Content>
-        
+
         <StackLayout>
             <Grid Padding="15,15,15,0" >
                 <Grid.RowDefinitions>
@@ -68,7 +71,7 @@
                                  Margin="0,0,10,0" HorizontalOptions="End"
                                  Command="{Binding OrdersHistoryCommand}"/>
 
-                 
+
                     <Label Text="{Binding UserCartItemsCount}" 
                            Style="{StaticResource PrimaryLabelHeader}"
                            Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"
@@ -134,7 +137,7 @@
 
                 <!--<Label Grid.Row="3" Text="Ultimos Productos" FontSize="25" FontAttributes="Bold" Style="{StaticResource PrimaryLabelHeader}"/>-->
 
-                <CollectionView ItemsSource="{Binding LatestItems}"
+                <CollectionView ItemsSource="{Binding ListItemsProducts}"
                                 Margin="0,20,0,0" VerticalOptions="Start"
                                 VerticalScrollBarVisibility="Never"
                                 x:Name="CVLatest"
@@ -145,11 +148,10 @@
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="20" HorizontalItemSpacing="20" Span="2" />
                     </CollectionView.ItemsLayout>
+
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-
-                         
-                                <Frame CornerRadius="10"   >
+                            <Frame CornerRadius="10"   >
                                 <Grid WidthRequest="145" HeightRequest="170" BackgroundColor="White" >
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto"/>
@@ -159,10 +161,12 @@
                                     </Grid.RowDefinitions>
 
                                     <pancake:PancakeView Grid.Row="0" >
-                                        <Image Source="{Binding ImageUrl}" HeightRequest="90" WidthRequest="110" />
-                                        
+                                        <Image Source="{Binding Image,  Converter={StaticResource Base64ToImage}}"
+                                               HeightRequest="90" 
+                                               WidthRequest="110" />
+
                                     </pancake:PancakeView>
-                                  
+
                                     <Label Grid.Row="1" Text="{Binding Price, StringFormat='L{0}'}" FontSize="12"
                                                Style="{StaticResource SecondaryLabel}"
                                            
@@ -175,19 +179,15 @@
                                     <Label Grid.Row="3" Margin="30,0,0,0" FontSize="10" VerticalOptions="Center" >
                                         <Label.FormattedText>
                                             <FormattedString>
-                                                <Span Text="{Binding Rating}" FontAttributes="Bold" TextColor="{AppThemeBinding Light={StaticResource LightContentTextColor},
-                                                 Dark={StaticResource DarkContentTextColor}}" />
                                                 <Span Text="{Binding Description, StringFormat='{0}'}" TextColor="{AppThemeBinding Light={StaticResource LightContentTextColor},
                                                  Dark={StaticResource DarkContentTextColor}}"/>
                                             </FormattedString>
                                         </Label.FormattedText>
                                     </Label>
 
-
-
                                 </Grid>
-                                    </Frame>
-                           
+                            </Frame>
+
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
@@ -214,8 +214,8 @@
                 </sombras:Shadows>
             </StackLayout>
         </StackLayout>
-        
-        
-        
+
+
+
     </ContentPage.Content>
 </ContentPage>
