--- a/SuperEconomicoApp/Views/PaymentMethodView.xaml
+++ b/SuperEconomicoApp/Views/PaymentMethodView.xaml
@@ -7,6 +7,7 @@
     <Grid>
 
         <CollectionView ItemsSource="{Binding listMethodPayment}"
+                        SelectedItem="{Binding PaymentSelected}"
                         VerticalOptions="CenterAndExpand"
                         Margin="20,30,20,0"
                         x:Name="listMethodPaymentCollection"
