Calculo de km con Api Google Distance Matrix agregado y funcional

--- a/SuperEconomicoApp/Views/Ubication/AddDirectionView.xaml
+++ b/SuperEconomicoApp/Views/Ubication/AddDirectionView.xaml
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps"
              x:Class="SuperEconomicoApp.Views.Ubication.AddDirectionView">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Agregar Direction"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <maps:Map x:Name="map" HeightRequest="480"/>
+            <StackLayout Padding="10">
+                <Editor Text="{Binding Description}" 
+                    Placeholder="Ingrese una descripción de su dirección" 
+                    HeightRequest="100" 
+                    Margin="0,0,0,5"/>
+                <Button Text="Guardar"
+                    CornerRadius="10"
+                    Command="{Binding ConfirmUbicationCommand}"/>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
