Rectificacion de URL POST de ordenes con los nuevos parametros latitude y longitude

--- a/SuperEconomicoApp/Views/ConfirmOrderView.xaml
+++ b/SuperEconomicoApp/Views/ConfirmOrderView.xaml
@@ -195,7 +195,7 @@
                                        FontAttributes="Bold" 
                                        TextColor="Black" 
                                        FontSize="Medium"/>
-                                    <Label Text="{Binding Description}"
+                                    <Label Text="{Binding description}"
                                        FontSize="Small"/>
                                 </StackLayout>
 
